--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,21 +1,23 @@
-.container{
+.container {
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: 
-    "header header"
-    "main main"
-    "footer footer";
+    grid-template-areas:
+        "header header"
+        "main main"
+        "footer footer";
     min-height: 1000px;
 }
-p{
+
+p {
     text-align: center;
     color: rgb(240, 240, 243);
     font-size: 25px;
     text-transform: uppercase;
     font-style: oblique;
 }
-#header{
+
+#header {
     grid-area: header;
     background-color: rgb(112, 107, 107);
     width: 100%;
@@ -27,176 +29,210 @@ p{
     padding-bottom: 2px;
     float: inline-start;
 }
-#header-img{
-    height:55px;
+
+#header-img {
+    height: 55px;
     border-radius: 20%;
     padding-top: 5px;
     padding-left: 5px;
 }
-#header-img:hover{
+
+#header-img:hover {
     transform: rotate(40deg);
 }
-@media (max-width:720px){
-    #nav-bar{
-        font-size:20px;
-        float:right;
+
+@media (max-width:720px) {
+    #nav-bar {
+        font-size: 20px;
+        float: right;
         padding-right: 20%;
         overflow: hidden;
         padding-top: 10px;
-    
+
     }
 }
-@media (min-width:1200px){
-#nav-bar{
-    font-size:40px;
-    float:right;
-    padding-right: 15%;
-    overflow: hidden;
-    padding-top: 10px;
 
-}}
-a{
+@media (min-width:1200px) {
+    #nav-bar {
+        font-size: 40px;
+        float: right;
+        padding-right: 15%;
+        overflow: hidden;
+        padding-top: 10px;
+
+    }
+}
+
+a {
     text-align: center;
     text-decoration: none;
     color: #f2f2f2;
-    
+
 }
-a:hover{
+
+a:hover {
     background-color: blue;
 }
-a.active{
+
+a.active {
     background-color: rgb(142, 145, 142);
 }
-#main{
+
+#main {
     grid-area: main;
     background-color: rgb(35, 36, 36);
-    width:100%;
+    width: 100%;
     display: block;
 
 }
-#footer{
+
+#footer {
     background-color: rgba(4, 17, 2, 0.671);
     grid-area: footer;
 
 }
-#about-h1{
+
+#about-h1 {
     padding-top: 45px;
-    width:100%;
-    font-size:30px;
+    width: 100%;
+    font-size: 30px;
     text-align: center;
     color: rgb(189, 189, 192);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
+
 }
 
 /*display for mobile*/
-@media (max-width:600px){
-    .social{
+@media (max-width:600px) {
+    .social {
         float: right;
         color: blue;
         padding-right: 10%;
         padding-bottom: 2px;
         font-size: 20px;
     }
-    #contact-h1{
+
+    #contact-h1 {
         padding-top: 45px;
-        width:100%;
+        width: 100%;
         display: block;
-        font-size:25px;
+        font-size: 25px;
         text-align: center;
         color: tomato;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        
+
     }
-    #contact-details{
+
+    #contact-details {
         display: block;
     }
 }
-b{
+
+b {
     color: rgb(13, 9, 241);
 }
+
 /*display for tablets and bigger screens*/
-@media (min-width:720px){
-.social{
-    float: right;
-    padding-right: 50%;
-    padding-bottom: 10px;
-    font-size: 60px;
+@media (min-width:720px) {
+    .social {
+        float: right;
+        padding-right: 50%;
+        padding-bottom: 10px;
+        font-size: 60px;
+    }
+
+    #contact-h1 {
+        padding-top: 45px;
+        width: 100%;
+        font-size: 40px;
+        text-align: center;
+        color: tomato;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    }
+
+    #contact-details {
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    #email {
+        width: 80%;
+        height: 15%;
+    }
+
+    #submit {
+        height: 18%;
+
+    }
 }
-#contact-h1{
-    padding-top: 45px;
-    width:100%;
-    font-size:40px;
-    text-align: center;
-    color: tomato;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
-#contact-details{
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(3, 1fr); 
-}
-#email{
-    width:80%;
-    height: 15%;
-}
-#submit{
-    height: 18%;
-    
-}
-}
-#submit{
+
+#submit {
     background-color: rgb(148, 4, 4);
 }
-#submit:hover{
+
+#submit:hover {
     background-color: yellowgreen;
 }
-#about{
+
+#about {
     font-display: justify;
     text-align: justify;
     display: block;
     padding-top: 1%;
     padding-right: 5%;
-    padding-left:5%; 
+    padding-left: 5%;
 }
 
-#contact{
-     display: inherit;
+#contact {
+    display: inherit;
     padding: 5%;
-      
+
 }
-#form{
+
+#form {
     background-color: aliceblue;
     height: 200px;
-    padding:5%;
+    padding: 5%;
 
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.blinking{
+.blinking {
     animation: blinkingText 1s infinite;
 
 }
 
-@keyframes blinkingText{
-    0%{ transform: none;
-    
+@keyframes blinkingText {
+    0% {
+        transform: none;
+
     }
-    49%{ transform: 1.49;
-    color: transparent;
-    }
-    50%{ transform:1.5;
+
+    49% {
+        transform: 1.49;
         color: transparent;
     }
-    70%{transform: 1.7;
+
+    50% {
+        transform: 1.5;
         color: transparent;
     }
-    90%{transform: 1.9;
+
+    70% {
+        transform: 1.7;
         color: transparent;
-    
     }
-    100%{transform: 2;
-        
+
+    90% {
+        transform: 1.9;
+        color: transparent;
+
+    }
+
+    100% {
+        transform: 2;
+
     }
 }
